# meorg_client

./: .gitattributes  .readthedocs.yaml  COPYRIGHT.txt  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.conda/: build_env.yaml  meorg_client_dev.yaml  meta.yaml  mkdocs-requirements.txt
.github/: ci.yml
.github/workflows/: cd.yml  ci.yml
acme/: client.py
docs/: api.md  cli.md  contributing.md  developing.md  index.md  releasing.md
meorg_client/: __init__.py  _version.py  cli.py  client.py  constants.py  endpoints.py  exceptions.py  mkdocs.yml  parallel.py  test.j2  test.py  utilities.py
meorg_client/data/: openapi.json
meorg_client/docs/: cli.md
meorg_client/tests/: conftest.py  test_cli.py  test_client.py  test_utilities.py
