[metadata]
name = meorg_client
author = Ben Schroeter
author_email = benjamin.schroeter@anu.edu.au
license = APACHE 2.0
description = An API client for interacting with modelevaluation.org.
long_description = An API client for interacting with modelevaluation.org.

url = https://github.com/CABLE-LSM/meorg_client
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache 2.0 License
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
python_requires = >=3.11
install_requires =
    requests>=2.31.0
    requests-mock>=1.11.0
    PyYAML>=6.0.1    